# gen

./: .gitignore  Cargo.toml  Readme.md  default.nix  flake.nix  temp.txt
src/: args.rs  main.rs  program.rs
