[package]
name = "gen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atty = "0.2.14"
clap = { version = "4.5.4", features = ["derive"] }
dirs = "5.0.1"
rand = "0.8.5"
random-string = "1.1.0"
uuid = { version = "1.8.0", features = ["v1", "v3", "v4", "v5", "v6", "v7", "v8"] }
